[package]
name = "api_config"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
utoipa = { version = "4.2.0", features = ["axum_extras", "chrono", "uuid", "openapi_extensions"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
hub_gateway_core_types = { path = "../hub_gateway_core_types" }
anyhow = "1.0"
log = "0.4"
tracing = "0.1"

[dev-dependencies]
axum-test = "16"
tokio = { version = "1.45.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
wiremock = "0.5"